from django.db import models
from django.contrib.auth.models import User
from departments.models import Department, Position
from django.utils import timezone
from django.core.validators import MinLengthValidator, MaxLengthValidator, RegexValidator

class Employee(models.Model):
    DEFAULT_ANNUAL_LEAVE = 11
    DEFAULT_SICK_LEAVE = 11
    DEFAULT_EMERGENCY_LEAVE = 11
    TOTAL_LEAVE_ALLOWANCE = 33
    ANNUAL_LEAVE_DAYS = DEFAULT_ANNUAL_LEAVE  # للتوافق مع الشيفرة القديمة
    GENDER_CHOICES = (
        ('male', 'ذكر'),
        ('female', 'أنثى'),
    )

    employee_number = models.PositiveIntegerField(unique=True, null=True, blank=True)
    user = models.OneToOneField(User, on_delete=models.CASCADE, related_name='employee_profile', null=True, blank=True)
    department = models.ForeignKey(Department, on_delete=models.SET_NULL, null=True, blank=True)
    position = models.ForeignKey(Position, on_delete=models.SET_NULL, null=True, blank=True)
    first_name = models.CharField(max_length=100, null=True, blank=True)
    last_name = models.CharField(max_length=100, null=True, blank=True)
    gender = models.CharField(max_length=10, choices=GENDER_CHOICES, default='male')
    national_id = models.CharField(
        max_length=20, 
        unique=True, 
        null=True, 
        blank=True,
        validators=[
            MinLengthValidator(11),
            MaxLengthValidator(11),
            RegexValidator(r'^\d{11}$', 'يجب أن يتكون الرقم الوطني من 11 رقم بالضبط')
        ]
    )
    birth_date = models.DateField(null=True, blank=True)
    phone = models.CharField(
        max_length=20, 
        null=True, 
        blank=True,
        validators=[
            MinLengthValidator(10),
            MaxLengthValidator(10),
            RegexValidator(r'^\d{10}$', 'يجب أن يتكون رقم الهاتف من 10 أرقام بالضبط')
        ]
    )
    iban = models.CharField(max_length=34, null=True, blank=True)
    salary = models.DecimalField(max_digits=10, decimal_places=2, null=True, blank=True, verbose_name="الراتب")

    temporary_password = models.CharField(max_length=100, null=True, blank=True, help_text="كلمة المرور المؤقتة للاستخدام الداخلي فقط")
    profile_picture = models.ImageField(upload_to='profile_pics/', null=True, blank=True, verbose_name="صورة الملف الشخصي")
    date_of_birth = models.DateField(null=True, blank=True, verbose_name="تاريخ الميلاد")
    address = models.TextField(null=True, blank=True, verbose_name="العنوان")
    emergency_contact = models.CharField(max_length=100, null=True, blank=True, verbose_name="جهة الاتصال الطارئة")
    emergency_contact_phone = models.CharField(max_length=20, null=True, blank=True)
    emergency_phone = models.CharField(max_length=20, null=True, blank=True, verbose_name="رقم هاتف الطوارئ")

    def save(self, *args, **kwargs):
        if self.employee_number is None:
            last_number = Employee.objects.order_by('-employee_number').values_list('employee_number', flat=True).first()
            self.employee_number = (last_number or 0) + 1
        super().save(*args, **kwargs)

    def __str__(self):
        if self.first_name and self.last_name:
            return f"{self.first_name} {self.last_name}"
        elif self.user:
            return f"{self.user.first_name} {self.user.last_name}"
        return f"Employee #{self.id}"
    
    def get_full_name(self):
        """Get the full name from User model or Employee model"""
        if self.user and (self.user.first_name or self.user.last_name):
            return f"{self.user.first_name} {self.user.last_name}".strip()
        elif self.first_name or self.last_name:
            return f"{self.first_name} {self.last_name}".strip()
        return f"Employee #{self.id}"

    def get_annual_leave_balance(self, year=None):
        year = year or timezone.localdate().year
        approved_days = self._approved_leave_days('ANNUAL', year)
        return max(self.ANNUAL_LEAVE_DAYS - approved_days, 0)

    def _approved_leave_days(self, leave_type, year=None):
        from leaves.models import LeaveRequest
        year = year or timezone.localdate().year
        return sum(
            leave.total_days
            for leave in LeaveRequest.objects.filter(
                employee=self,
                leave_type=leave_type,
                status='APPROVED',
                start_date__year=year,
            )
        )

    @property
    def annual_remaining(self):
        return max(self.DEFAULT_ANNUAL_LEAVE - self._approved_leave_days('ANNUAL'), 0)

    @property
    def sick_remaining(self):
        return max(self.DEFAULT_SICK_LEAVE - self._approved_leave_days('SICK'), 0)

    @property
    def emergency_remaining(self):
        return max(self.DEFAULT_EMERGENCY_LEAVE - self._approved_leave_days('EMERGENCY'), 0)

    @property
    def total_leave_remaining(self):
        used = sum(
            self._approved_leave_days(leave_type)
            for leave_type in ('ANNUAL', 'SICK', 'EMERGENCY')
        )
        return max(self.TOTAL_LEAVE_ALLOWANCE - used, 0)

    def leave_quota(self, leave_type):
        quotas = {
            'ANNUAL': self.DEFAULT_ANNUAL_LEAVE,
            'SICK': self.DEFAULT_SICK_LEAVE,
            'EMERGENCY': self.DEFAULT_EMERGENCY_LEAVE,
        }
        return quotas.get(leave_type, 0)

    def leave_remaining(self, leave_type, year=None):
        return max(self.leave_quota(leave_type) - self._approved_leave_days(leave_type, year), 0)
    
    def get_profile_picture_url(self):
        """Get profile picture URL or return default avatar"""
        if self.profile_picture:
            return self.profile_picture.url
        return None


class EmployeePhone(models.Model):
    employee = models.ForeignKey(Employee, on_delete=models.CASCADE, related_name='phone_numbers')
    number = models.CharField(max_length=20, verbose_name='رقم الهاتف')
    label = models.CharField(max_length=50, default='Mobile', blank=True, verbose_name='التسمية')
    is_primary = models.BooleanField(default=False, verbose_name='رقم رئيسي')

    class Meta:
        ordering = ['-is_primary', 'id']
        unique_together = ('employee', 'number')

    def __str__(self):
        return f"{self.employee} - {self.number}"


class Contract(models.Model):
    STATUS_CHOICES = (
        ('ACTIVE', 'نشط'),
        ('EXPIRED', 'منتهي'),
        ('TERMINATED', 'منتهٍ'),
        ('RESIGNED', 'استقالة'),
    )
    CONTRACT_TYPES = (
        ('Full-Time', 'دوام كامل'),
        ('Part-Time', 'دوام جزئي'),
        ('Fixed-Term', 'عقد محدد المدة'),
        ('Internship', 'تدريب'),
    )
    employee = models.OneToOneField(Employee, on_delete=models.CASCADE, related_name='contract')
    contract_type = models.CharField(max_length=20, choices=CONTRACT_TYPES, default='Full-Time')
    salary = models.DecimalField(max_digits=10, decimal_places=2)
    start_date = models.DateField()
    end_date = models.DateField(null=True, blank=True)
    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='ACTIVE')
    document = models.FileField(upload_to='contracts/%Y/%m/', null=True, blank=True)
    termination_date = models.DateField(null=True, blank=True)
    termination_reason = models.TextField(blank=True)
    clearance_status = models.CharField(max_length=30, choices=(
        ('PENDING', 'قيد الإخلاء'),
        ('IN_PROGRESS', 'قيد التنفيذ'),
        ('CLEARED', 'مكتمل'),
    ), default='PENDING')
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"عقد الموظف {self.employee}"