# Generated by Django 6.0.7 on 2026-08-19 08:48

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('employees', '0006_employeephone'),
    ]

    operations = [
        migrations.CreateModel(
            name='Payroll',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('month', models.PositiveIntegerField(verbose_name='الشهر')),
                ('year', models.PositiveIntegerField(verbose_name='السنة')),
                ('basic_salary', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='الراتب الأساسي')),
                ('allowances', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='البدلات')),
                ('bonuses', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='المكافآت')),
                ('deductions_absence', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='خصم الغياب')),
                ('deductions_delay', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='خصم التأخير')),
                ('insurance', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='التأمينات')),
                ('other_deductions', models.DecimalField(decimal_places=2, default=0.0, max_digits=10, verbose_name='خصومات أخرى')),
                ('net_salary', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='صافي الراتب')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('employee', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='payrolls', to='employees.employee', verbose_name='الموظف')),
            ],
            options={
                'verbose_name': 'مسرد راتب',
                'verbose_name_plural': 'كشوف الرواتب',
                'unique_together': {('employee', 'month', 'year')},
            },
        ),
    ]
