# Generated by Django 6.0.7 on 2026-08-19 08:48

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('employees', '0006_employeephone'),
    ]

    operations = [
        migrations.CreateModel(
            name='PerformanceEvaluation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('evaluation_date', models.DateField(auto_now_add=True, verbose_name='تاريخ التقييم')),
                ('period', models.CharField(max_length=50, verbose_name='فترة التقييم (مثال: Q1 2026)')),
                ('period_type', models.CharField(choices=[('ANNUAL', 'سنوي'), ('SEMI_ANNUAL', 'نصف سنوي')], default='ANNUAL', max_length=20, verbose_name='نوع الفترة')),
                ('status', models.CharField(choices=[('DRAFT', 'مسودة'), ('COMPLETED', 'مكتمل')], default='COMPLETED', max_length=20, verbose_name='الحالة')),
                ('work_quality', models.PositiveIntegerField(verbose_name='جودة العمل (1-5)')),
                ('commitment', models.PositiveIntegerField(verbose_name='الالتزام والانضباط (1-5)')),
                ('cooperation', models.PositiveIntegerField(verbose_name='التعاون والعمل الجماعي (1-5)')),
                ('overall_score', models.FloatField(editable=False, verbose_name='النتيجة الإجمالية')),
                ('feedback', models.TextField(verbose_name='ملاحظات المدير')),
                ('employee_feedback', models.TextField(blank=True, verbose_name='رد الموظف')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('employee', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='evaluations', to='employees.employee', verbose_name='الموظف')),
                ('evaluator', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='given_evaluations', to='employees.employee', verbose_name='المقيِّم (المدير)')),
            ],
            options={
                'verbose_name': 'تقييم أداء',
                'verbose_name_plural': 'تقييمات الأداء',
            },
        ),
    ]
