erDiagram
    User ||--o{ Employee : "has profile"
    User ||--o{ SystemNotification : "receives"
    User ||--o{ SystemNotification : "sends"
    User ||--o{ InternalMessage : "sends"
    User ||--o{ InternalMessage : "receives"
    User ||--o{ Notification : "receives"
    User ||--|| Group : "belongs to"

    Department ||--o{ Position : "contains"
    Department ||--o{ Employee : "employs"
    
    Position ||--o{ Employee : "assigns"
    Position }o--|| Group : "has permissions"
    
    Employee ||--o{ EmployeePhone : "has multiple"
    Employee ||--|| Contract : "has contract"
    Employee ||--o{ LeaveRequest : "submits"
    Employee ||--o{ LeaveRequest : "approves"
    Employee ||--o{ Payroll : "receives"
    Employee ||--o{ PerformanceEvaluation : "undergoes"
    Employee ||--o{ PerformanceEvaluation : "conducts"
    
    ContentType ||--o{ SystemNotification : "can be target"

    User {
        int id PK
        string username UK
        string email UK
        string first_name
        string last_name
        string password
        boolean is_active
        boolean is_staff
        boolean is_superuser
        datetime date_joined
    }

    Group {
        int id PK
        string name UK
    }

    Employee {
        int id PK
        int employee_number UK
        int user_id FK
        int department_id FK
        int position_id FK
        string first_name
        string last_name
        string gender
        string national_id UK
        date birth_date
        string phone
        string iban
        decimal salary
        string temporary_password
        string profile_picture
        date date_of_birth
        text address
        string emergency_contact
        string emergency_contact_phone
        string emergency_phone
    }

    EmployeePhone {
        int id PK
        int employee_id FK
        string number
        string label
        boolean is_primary
    }

    Contract {
        int id PK
        int employee_id FK
        string contract_type
        decimal salary
        date start_date
        date end_date
        string status
        string document
        date termination_date
        text termination_reason
        string clearance_status
        datetime created_at
    }

    Department {
        int id PK
        string name UK
        string code UK
        text description
        datetime created_at
    }

    Position {
        int id PK
        string title
        int department_id FK
        decimal base_salary
        decimal salary_min
        decimal salary_max
        int group_id FK
        string role
        boolean is_head
    }

    LeaveRequest {
        int id PK
        int employee_id FK
        string leave_type
        date start_date
        date end_date
        text reason
        string status
        string ai_prediction
        float ai_confidence
        int approved_by_id FK
        text manager_notes
        datetime created_at
    }

    Payroll {
        int id PK
        int employee_id FK
        int month
        int year
        decimal basic_salary
        decimal allowances
        decimal bonuses
        decimal deductions_absence
        decimal deductions_delay
        decimal insurance
        decimal other_deductions
        decimal net_salary
        string status
        datetime created_at
    }

    PerformanceEvaluation {
        int id PK
        int employee_id FK
        int evaluator_id FK
        date evaluation_date
        string period
        string period_type
        string status
        int work_quality
        int commitment
        int cooperation
        float overall_score
        text feedback
        text employee_feedback
        datetime updated_at
    }

    SystemNotification {
        int id PK
        int recipient_id FK
        int actor_id FK
        string verb
        int target_content_type_id FK
        int target_object_id
        string notification_type
        text message
        boolean is_read
        datetime created_at
    }

    Notification {
        int id PK
        int user_id FK
        string notification_type
        string title
        text message
        json details
        string status
        datetime created_at
        datetime read_at
        datetime opened_at
    }

    InternalMessage {
        int id PK
        int sender_id FK
        int recipient_id FK
        string subject
        text body
        boolean is_read
        datetime created_at
        datetime read_at
    }

    ContentType {
        int id PK
        string app_label
        string model
    }